--- a/FrontTFG/index.html
+++ b/FrontTFG/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>GALACTIC GAMES</title>
   </head>
   <body>
     <div id="app"></div>
@@ -12,7 +12,10 @@
   </body>
 </html>
 <style>
-  body {
+  html, body {
+    overflow: scroll;
     margin: 0;
-  }
+    -ms-overflow-style: none;  
+    scrollbar-width: none; 
+}
 </style>
